Fix testcases not running